--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.15.13",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue2-dropzone": "^3.6.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
