--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^5.4.1",
     "element-ui": "^2.15.13",
     "vue": "^2.6.14",
+    "vue-cropper": "^0.5.11",
     "vue-router": "^3.5.1",
     "vue2-dropzone": "^3.6.0",
     "vuex": "^3.6.2"
